fixed contrast issues w/ "socials" button

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -86,6 +86,8 @@ footer {
     display: none;
     padding: .4em;
     margin-left: 1em;
+    background-color: rgba(27, 27, 27, .85);
+    color: rgba(255, 255, 255, 0.85);
 }
 
 #navbar-dropdown {
